--- a/src/SampleApp.Domain/Localization/SampleApp/en.json
+++ b/src/SampleApp.Domain/Localization/SampleApp/en.json
@@ -3,6 +3,9 @@
   "texts": {
     "Menu:Home": "Home",
     "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Permission:UserSearch": "User Search",
+    "Menu:BooksStore": "Book Store",
+    "Menu:Books": "Books"
   }
 }
