--- a/src/SampleApp.Domain/Localization/SampleApp/tr.json
+++ b/src/SampleApp.Domain/Localization/SampleApp/tr.json
@@ -6,6 +6,7 @@
     "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz.",
     "Permission:UserSearch": "Kullanıcı arama",
     "Menu:BooksStore": "Kitap Dükkanı",
-    "Menu:Books": "Kitaplar"
+    "Menu:Books": "Kitaplar",
+    "Menu:Authors": "Yazarlar"
   }
 }
